# mlops-course

./: pyproject.toml
mlops_course/notebooks/.ipynb_checkpoints/: homework_week1-checkpoint.ipynb
tests/: test_mlops_course.py
